--- a/kontakt.html
+++ b/kontakt.html
@@ -7,9 +7,9 @@
 		<link rel="shortcut icon" href="http://fice.ch/" type="directory" />
 		<link rel="icon" href="http://fice.ch/" type="directory" / -->
 
-		<base href="file:///C:/Marko/FICE/" />	
-		<link rel="shortcut icon" href="file:///C:/Marko/FICE/" type="directory" />
-		<link rel="icon" href="file:///C:/Marko/FICE/"" type="directory" />
+		<base href="http://jyrkinen.ch" />
+		<link rel="shortcut icon" href="http://jyrkinen.ch/" type="directory" />
+		<link rel="icon" href="http://jyrkinen.ch/" type="directory" />
 
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css?1441799116" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/flexslider.css?1410871112" media="all" />
@@ -21,7 +21,8 @@
 		<script src="script/Default.js?1410870919" type="text/javascript"></script>
 		<script src="script/javascript.js?1410871303" type="text/javascript"></script>
 		<script src="script/jquery.fancybox-1.3.4.pack.js?1410870436" type="text/javascript"></script>
-		
+		<script src="script/custom.js?1410867219" type="text/javascript"></script>
+
 		<title>Kontakt</title>    
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<link rel="stylesheet" type="text/css" href="css/Form.css" media="all" />
