--- a/projekte.html
+++ b/projekte.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html class="no-js"> 
 	<head>
-		<!--  meta charset="utf-8" />
-		<base href="http://fice.ch" />
+		<meta charset="utf-8" />
+
+		<!-- base href="http://fice.ch" />
 		<link rel="shortcut icon" href="http://www.fice.ch/" type="directory" />
 		<link rel="icon" href="http://www.fice.ch/" type="directory" / -->
-		<base href="file:///C:/Marko/FICE/" />
-		<link rel="shortcut icon" href="file:///C:/Marko/FICE/" type="directory" />
-		<link rel="icon" href="file:///C:/Marko/FICE/"" type="directory" />
-
+		<base href="http://jyrkinen.ch" />
+		<link rel="shortcut icon" href="http://jyrkinen.ch/" type="directory" />
+		<link rel="icon" href="http://jyrkinen.ch/" type="directory" />
+		
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css?1441799116" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/flexslider.css?1410871112" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/Default.css?1410870919" media="all" />
