--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<title>HOME</title>    
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	</head>
-	<!--  This is my tes change -->
+	<!--  This is my test change -->
 	<body>
 		<div id="wrapper">
 		<div class="page subpage">
