--- a/home/Beitrittserklaerung.html
+++ b/home/Beitrittserklaerung.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="http://fice.ch/" type="directory" / -->
 		<base href="file:///C:/Marko/FICE/" />
 		<link rel="shortcut icon" href="file:///C:/Marko/FICE/" type="directory" />
-		<link rel="icon" href="file:///C:/Marko/FICE/"" type="directory" />
+		<link rel="icon" href="file:///C:/Marko/FICE/" type="directory" />
 		
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css?1441799116" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/flexslider.css?1410871112" media="all" />
@@ -196,7 +196,8 @@
 											<ul class="csc-bulletlist csc-bulletlist-0">
 												<li class="odd">50 % der Mitgliederbeiträge gehen in einen Fonds zur Unterstützung von Mitgliedern
 													aus devisenschwachen Ländern zur Teilnahme an FICE-Aktivitäten oder zur Unterstützung von 
-													sozialpädagogischen Projekten in diesen Ländern.												</li>
+													sozialpädagogischen Projekten in diesen Ländern.
+												</li>
 												<li class="even">Die Mitgliedschaft bei der FICE Schweiz darf nicht im Sinne eines Labels verwendet
 													werden.
 												</li>
