--- a/partner.html
+++ b/partner.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="http://fice.ch/" type="directory" / -->
 		<base href="file:///C:/Marko/FICE/" />	
 		<link rel="shortcut icon" href="file:///C:/Marko/FICE/" type="directory" />
-		<link rel="icon" href="file:///C:/Marko/FICE/"" type="directory" />
+		<link rel="icon" href="file:///C:/Marko/FICE/" type="directory" />
 	
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css?1441799116" media="all" />
 		<link rel="stylesheet" type="text/css" href="css/flexslider.css?1410871112" media="all" />
